add right skills and add responsiveness

--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+   
     <header>
       <nav>
         <div class="nav-container">
           <div class="nav-logo">
-            <img src="assets/Logo.svg" alt="logo" height="20px" width="20px" />
+            <img src="assets/Logo.svg" alt="logo" height="38px" width="38px" />
           </div>
           <div class="nav-content">
             <ul>
               <li><a href="#">Home</a></li>
-              <li><a href="#skils">skills</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="#skills">skills</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#contacts">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -129,13 +131,14 @@
             </div>
            
             <div class="skilltree">
-              <img src="assets/svgtree.svg" alt="" />
+              <img src="assets/svgtree.svg" alt=""  class="svgtree"/>
+              <img src="assets/svgtreem.svg" alt=""  class="svgtreem"/>
             </div>
           </div>
         </div>
       </section>
 
-      <section class="projects">
+      <section class="projects" id="projects">
         <div class="my-projects">
           <div class="project-left">
             <span>Featured Projects</span>
@@ -186,7 +189,7 @@
         </div>
 
 
-        <div class="contact">
+        <div class="contact" id="contacts">
             <p>Contact</p>
 
             <p>I'm currently looking to join a cross-functional team that values improving people's lives
