--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
                 <p class="current-work">
                   Currently, I'm a Frontend Engineer at <span>Zuru Tech</span>,
                 </p>
-                <p>
-                  A self-taught UI/UX designer, functioning in the industry for
-                  3+ years now.<br />I make meaningful and delightful digital
-                  products that create an equilibrium<br />between user needs
+                <p class="about-para">
+                  A self-taught Frontend Engineer, currently intern at Zuru Tech.<br />I make meaningful and delightful digital
+                  products that create an equilibrium<br/>between user needs
                   and business goals.
                 </p>
               </div>
@@ -126,7 +125,7 @@
                 <span>cross-functional</span> team
               </p>
               <p>
-                that values improving peoples lives through accessible design
+                that values improving peoples lives through accessible softwares
               </p>
             </div>
            
