--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
           <div class="nav-content">
             <ul>
               <li><a aria-label="nav-links" href="#">Home</a></li>
-              <li><a aria-label="nav-links" href="#skills">Skills</a></li>
-              <li><a aria-label="nav-links" href="#projects">Projects</a></li>
-              <li><a aria-label="nav-links" href="#contacts">Contact</a></li>
+              <li><a aria-label="nav-links" class="nav-link-skills" ">Skills</a></li>
+              <li><a aria-label="nav-links" class="nav-link-projects">Projects</a></li>
+              <li><a aria-label="nav-links"  class="nav-link-contacts">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -281,5 +281,6 @@
         loop: true,
       });
     </script>
+    <script src="script.js"></script>
   </body>
 </html>
